src/tests/testfiles/binary-operators/types-33.txt
Error at 5:11: invalid type argument of unary '*' (have 'char')
a == *b[0];
      ^
